<resources>
    <string name="app_name">DisneyPlusClone</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!---->
    <string name="app_splash_image_view">App Splash Image View</string>
    <!--On Boarding-->
    <string name="sign_in_btn_txt">OTURUM AÇ</string>
    <string name="price_information_txt">₺34,99/ay karşılığında üye olun ya da yıllık üyelik\niçin sadece ₺349,90/yıl ödeyerek %15 tasarruf edin.</string>
    <string name="on_boarding_sign_up_btn">ŞİMDİ ÜYE OL</string>
    <string name="onboarding_collaborative_txt">Dünyanın en iyi hikayeleri.Hepsi bir yerde</string>
    <string name="imageview_description">OnBoarding</string>
</resources>